--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -604,8 +604,10 @@ src/Osako/SaveFile.cpp:
     .sbss: [0x80416a48, 0x80416a50]
     .sdata2: [0x8041b840, 0x8041b858]
 
-#src/Sato/stMath.cpp: # can't be compiled currently
-    #.text: [0x8021e070, 0x8021fa40] 
-    #.rodata: [0x8037eec8, 0x8037eef0]
-    #.data: [0x8039d6f0, 0x8039d708]
-    #.sbss: [0x80416ac8, 0x80416ad0]
+src/Sato/stMath.cpp:
+    .text: [0x8021e070, 0x8021fa40] 
+    .rodata: [0x8037eec8, 0x8037eef0]
+    .data: [0x8039d6f0, 0x8039d708]
+    .sdata: [0x804148e0, 0x804148e8]
+    .sbss: [0x80416ac8, 0x80416ad0]
+    .sdata2: [0x8041bb60, 0x8041bbb8]
