--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -577,6 +577,10 @@ src/Osako/SaveFile.cpp:
     #.bss: [0x803c65f4, 0x803c6a00]
     .sbss: [0x803d5c90, 0x803d5c98]
 
+src/Osako/password.cpp:
+    .text: [0x801e76a8, 0x801e7a8c]
+    .rodata: [0x80341938, 0x803419a0]
+
 src/Sato/stMath.cpp:
     .text: [0x801ebb10, 0x801ed470] 
     .data: [0x8035d110, 0x8035d128]
