--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -233,6 +233,11 @@ libs/JSystem/JFramework/JFWDisplay.cpp:
     .sbss: [0x803d4c40, 0x803d4c68]
     .sdata2: [0x803d6ae8, 0x803d6b10]
 
+libs/JSystem/JAudio/JASCalc.cpp:
+    .text: [0x8008f938, 0x80090198] # NOTE: currently has to exclude clamp<s,l>__7JASCalcFl
+    .rodata: [0x80332810, 0x80332c28]
+    .sdata2: [0x803d6cd8, 0x803d6d08]
+
 libs/JSystem/JAudio/JASReport.cpp:
     .text: [0x80091270, 0x8009136c]
     .bss: [0x8036e7c8, 0x8036e7e0]
