--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -248,6 +248,12 @@ libs/JSystem/JAudio/JASCalc.cpp:
     .rodata: [0x80368090, 0x80368520]
     .sdata2: [0x80417d10, 0x80417d48]
 
+libs/JSystem/JAudio/JASDvdThread.cpp:
+    .text: [0x8008fd8c, 0x8008fee0]
+    .rodata: [0x80368520, 0x80368570]
+    .sbss: [0x80415a10, 0x80415a18]
+    .sdata2: [0x80417d48, 0x80417d60]
+
 libs/JSystem/JAudio/JASReport.cpp:
     .text: [0x80090df4, 0x80090ef0]
     .bss: [0x803aec98, 0x803aecb0]
