--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -263,6 +263,13 @@ libs/JSystem/JAudio/JASSoundParams.cpp:
     .text: [0x800967d0, 0x8009682c]
     .sdata2: [0x80417f28, 0x80417f30]
 
+libs/JSystem/JAudio/JASInstRand.cpp:
+    .text: [0x800997f8, 0x8009996c]
+    .rodata: [0x80369540, 0x80369550]
+    .data: [0x8038b9a8, 0x8038b9b8]
+    .sbss: [0x80415ab0, 0x80415ab8]
+    .sdata2: [0x80417fb8, 0x80417fd8]
+
 libs/dolphin/os/__ppc_eabi_init.cpp:
     .init: [0x80003400, 0x80003458]
     .text: [0x800f31b8, 0x800f324c]
