--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -547,6 +547,12 @@ src/Bando/EngineSound.cpp:
     .text: [0x8011226c, 0x801122dc]
     .data: [0x80353590, 0x803535e8]
 
+src/Inagaki/GameAudioHostIO.cpp:
+    #.text: [0x80113c28, 0x80113ddc]
+    #.ctors: [0x802d8598, 0x802d859c]
+    #.bss: [0x80388ee8, 0x80388f40]
+    .sdata2: [0x803d7658, 0x803d7660]
+
 src/Kameda/Scene.cpp:
     .text: [0x8012cfbc, 0x8012d020]
     .data: [0x803549a0, 0x803549b8]
