--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -699,6 +699,12 @@ src/Sato/stMath.cpp:
     .sbss: [0x80416ac8, 0x80416ad0]
     .sdata2: [0x8041bb60, 0x8041bbb8]
 
+src/Yamamoto/kartvec.cpp:
+    .text: [0x802e5210, 0x802e63fc] # 0x802e64e8
+    #.ctors: [0x803165e4, 0x803165e8]
+    #.bss: [0x803ef020, 0x803ef050]
+    .sdata2: [0x8041d7f8, 0x8041d830]
+
 src/Yamamoto/KartStar.cpp:
     .text: [0x80307c44, 0x80307dcc] # 0x80307eb8
     #.ctors: [0x80316628, 0x8031662c]
